syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "api/grpc/v1/contact;contact_grpc_service";

message Contact {
  string tenant = 1;
  string UUID = 2;
  string firstName = 3;
  string lastName = 4;
}

message UpsertContactGrpcRequest {
  string id = 1;
  string tenant = 2;
  string firstName = 3;
  string lastName = 4;
  string name = 5;
  string prefix = 6;
  string appSource = 7;
  string source = 8;
  string sourceOfTruth = 9;
  google.protobuf.Timestamp  createdAt = 10;
  google.protobuf.Timestamp  updatedAt = 11;
  string description = 12;
  string timezone = 13;
}

message LinkPhoneNumberToContactGrpcRequest {
  string tenant = 1;
  string contactId = 2;
  string phoneNumberId = 3;
  bool primary = 4;
  string label = 5;
}

message LinkEmailToContactGrpcRequest {
  string tenant = 1;
  string contactId = 2;
  string emailId = 3;
  bool primary = 4;
  string label = 5;
}

message UnlinkLocationFromContactGrpcRequest {
  string tenant = 1;
  string contactId = 2;
  string locationId = 3;
}

message CreateContactGrpcRequest {
  string tenant = 1;
  string firstName = 2;
  string lastName = 3;
  string prefix = 4;
  string description = 5;
  string appSource = 6;
  string source = 7;
  string sourceOfTruth = 8;
  optional google.protobuf.Timestamp  createdAt = 9;
  string timezone = 10;
}

message CreateContactGrpcResponse {
  string id = 1;
}

message ContactIdGrpcResponse {
  string id = 1;
}

service contactGrpcService {
  rpc CreateContact(CreateContactGrpcRequest) returns (CreateContactGrpcResponse);
  rpc UpsertContact(UpsertContactGrpcRequest) returns (ContactIdGrpcResponse);
  rpc LinkPhoneNumberToContact(LinkPhoneNumberToContactGrpcRequest) returns (ContactIdGrpcResponse);
  rpc LinkEmailToContact(LinkEmailToContactGrpcRequest) returns (ContactIdGrpcResponse);
  rpc UnlinkLocationFromContact(UnlinkLocationFromContactGrpcRequest) returns (ContactIdGrpcResponse);
}
